Fixed floating image on index.html with second style sheet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/styles/style.css"/>
 
     <title>About Me</title>
   </head>
@@ -65,11 +66,11 @@
             <h1>About Me</h1>
             <hr class="text-success"/>
             <img
-              class="rounded float-md-left img-fluid mr-4 mb-4"
+              class="rounded float-sm-left img-fluid mr-4 mb-4 profilepic"
               src="assets/profileicon.jpg"
               alt="Thomas' Profile Picture"
             />
-            <p>
+            <p class="text-success">
               My name is Thomas J Rider III, proudly named after my father and
               grandfather, and born in the great state of New York! I've lived
               most of my life in Charlotte, NC, and am a proud graduate of both
@@ -78,7 +79,7 @@
               ministarial life wasn't for me, and came back to Charlotte to work
               in theatre entertainment as a maintenance and facilities manager.
             </p>
-            <p>
+            <p class="text-success">
               In my free time, I spend a lot of time reading science fiction and
               fantasy novels, playing board games and other table top games, and
               generally nerding out about the latest Marvel or Star Wars film!
