Footer added to contact.html index.html and portfolio.html

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,10 @@
         </div>
       </div>
     </main>
+    <br>
+    <br>
+    <br>
+    <footer class="fixed-bottom footer-copywrite text-center py-4 bg-light text-white">&copy; 2020</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
