--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
         </div>
       </div>
     </main>
-
+    <br>
+    <br>
+    <br>
+    <footer class="fixed-bottom footer-copywrite text-center py-4 bg-light text-white">&copy; 2020</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
