--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,10 @@
         </article>
       </div>
     </main>
-
+    <br>
+    <br>
+    <br>
+    <footer class="fixed-bottom footer-copywrite text-center py-4 bg-light text-white">&copy; 2020</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
